# Elemental_Games_Modding

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Launch Azurik Mod Tools.bat  Launch Azurik Mod Tools.command  README.md  pyproject.toml
azurik_mod/: __init__.py  __main__.py  cli.py  plugins.py
docs/: AGENT_GUIDE.md  D1_EXTEND.md  D2_NXDK.md  DECOMP.md  INDEX.md  LEARNINGS.md  LOADING_ZONES_AUDIT.md  MODDING_GUIDE.md  ONBOARDING.md  PATCHES.md  PLUGINS.md  RANDOMIZER_AUDIT.md  SAVE_FORMAT.md  SAVE_PARSER_PLAN.md  SCRIPTS.md  SHIMS.md  SHIM_AUTHORING.md  TOOLING_ROADMAP.md  TOOLS.md  XBR_FORMAT.md  XBR_PACKS.md  ghidra_snapshot.json  xbr_graph_snapshot.json
examples/: default_settings.json  enemy_buff.json  player_boost.json
gui/: __init__.py  __main__.py  app.py  backend.py  models.py  widgets.py  xbr_workspace.py
scripts/: extract_save.py  gen_kernel_hdr.py  xbr_graph_snapshot.py  xbr_parser.py
shims/: .gitignore  README.md
tests/: _xbe_fixture.py  test_air_shield_flaps.py  test_append_xbe_section.py  test_apply_pack.py  test_assets_manifest.py  test_audio_and_plugins.py  test_audit_regressions.py  test_autocompile.py  test_categories.py  test_cheat_entity_hp.py  test_coff_relocations.py  test_config_wrappers.py  test_d1_extend.py  test_deep_pass.py  test_entity_editor.py  test_entity_editor_keyed_flaps.py  test_extra_whitelist_ranges.py  test_flap_at_peak.py  test_flap_descent_fuel_cost.py  test_float_param_injection.py  test_fps_coverage.py  test_fps_safety.py  test_ghidra_harness.py  test_ghidra_sync_structs.py  test_gravity_wrapper.py  test_gui_backend_params.py  test_gui_randomizer_slider_wiring.py  test_gui_tooltip.py  test_index_xbr.py  test_kernel_imports.py  test_legacy_pack_migration.py  test_loading_zones.py  (+44 more)
(+173 files in other folders)
