[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azurik-mod"
version = "0.3.0"
description = "Modding toolkit for Azurik: Rise of Perathia (Xbox) — patch loader, randomizer, and GUI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Elemental Games Modding" },
]
keywords = ["xbox", "azurik", "modding", "randomizer", "xbe", "patching"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Disassemblers",
]
dependencies = [
    "platformdirs>=4.0",
    "sv-ttk>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
azurik-mod = "azurik_mod.cli:main"
azurik-gui = "gui.app:main"

[project.urls]
Homepage = "https://github.com/MichaelJSr/Elemental_Games_Modding"
Issues = "https://github.com/MichaelJSr/Elemental_Games_Modding/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["azurik_mod*", "gui*"]
exclude = ["tests*", "scripts*", "examples*", "docs*", "tools*"]

[tool.setuptools.package-data]
"azurik_mod.config" = ["*.json"]
"azurik_mod.randomizer" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
